--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>LA TV Shows | Home</title>
+  <title>Top 100 Albums of All Time</title>
   <meta name="description" content="A Catalog of Shows Set in Los Angeles" />
   <link rel="stylesheet" href="style.css" />
   <script type="module" src="scripts.js"></script>
@@ -9,24 +9,29 @@
 
  <body>
   <header class="main-header">
-   <h1 class="title">LA TV Shows</h1>
+   <h1 class="title">Top 100 Albums of All Time</h1>
   </header>
-  <div id="card-container"></div>
-  <div class="card" style="display: none">
-   <div class="card-content">
-    <h2>TV Show Title</h2>
-    <img src="" alt="TV Show Poster" />
-    <ul>
-     <li>Bullet Point 1</li>
-     <li>Bullet Point 2</li>
-     <li>Bullet Point 3</li>
-    </ul>
+  <main class="" id="home-page">
+   <nav class="" id="filter-controls"><input type="text" /></nav>
+   <dialog id="dialog" style="z-index: 5000">
+    <form method="dialog">
+     <button type="submit" class="modal-close-button">Close</button>
+    </form>
+    <p id="modal-content"></p>
+   </dialog>
+   <div id="card-container"></div>
+   <div class="card" style="display: none">
+    <div class="flexbox card-head">
+     <h2 class="rank-number">0</h2>
+    </div>
+    <div class="card-content relative">
+     <img src="" alt="TV Show Poster" class="btn" />
+    </div>
+    <div class="flexbox heading">
+     <h2 class="artist"></h2>
+     <h2 class="title">TV Show Title</h2>
+    </div>
    </div>
-  </div>
-
-  <div class="footer">
-   <button onclick="quoteAlert();">Get A Quote!</button>
-   <button onclick="removeLastCard();">Remove A Card!</button>
-  </div>
+  </main>
  </body>
 </html>
