adjusted default styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
      <img src="" alt="TV Show Poster" class="btn" />
     </div>
     <div class="flexbox heading">
-     <h2 class="artist"></h2>
+     <h2
+      class="artist"
+      style="margin: 1rem 0 1rem 0; border-bottom: 1px solid gray"
+     ></h2>
      <h2 class="title">TV Show Title</h2>
     </div>
    </div>
