--- a/index.html
+++ b/index.html
@@ -12,20 +12,85 @@
    <h1 class="title">Top 100 Albums of All Time</h1>
   </header>
   <main class="" id="home-page">
-   <nav class="" id="filter-controls"><input type="text" /></nav>
-   <dialog id="dialog" style="z-index: 5000">
+   <nav class="" id="filter-controls">
+    <div class="join">
+     <input
+      type="text"
+      id="filterSearch"
+      placeholder="Did your Favorite Album Make the Cut? 👀"
+     />
+     <button id="searchByArtist" class="underline">Search by Artist</button>
+     <button id="searchByAlbum">Search By Album</button>
+    </div>
+    <select id="genreFilter">
+     <option value="" selected disabled>Filter By Genre</option>
+     <option value="option1">Hip Hop</option>
+     <option value="option2">Rock</option>
+     <option value="option3">Jazz</option>
+     <option value="option3">Pop</option>
+     <option value="option3">Punk</option>
+     <option value="option3">Funk</option>
+     <option value="option3">Soul</option>
+    </select>
+    <button class="">
+     Saved Albums
+     <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      fill="currentColor"
+      class="bi bi-bookmark"
+      viewBox="0 0 16 16"
+     >
+      <path
+       d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"
+      />
+     </svg>
+    </button>
+   </nav>
+   <dialog id="dialog">
     <form method="dialog">
-     <button type="submit" class="modal-close-button">Close</button>
+     <button type="submit" class="modal-close-button">
+      <svg
+       xmlns="http://www.w3.org/2000/svg"
+       width="16"
+       height="16"
+       fill="currentColor"
+       class="bi bi-x-lg"
+       viewBox="0 0 16 16"
+      >
+       <path
+        d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"
+       />
+      </svg>
+     </button>
     </form>
     <p id="modal-content"></p>
    </dialog>
    <div id="card-container"></div>
    <div class="card" style="display: none">
-    <div class="flexbox card-head">
-     <h2 class="rank-number">0</h2>
-    </div>
-    <div class="card-content relative">
-     <img src="" alt="TV Show Poster" class="btn" />
+    <div class="card-content relative" style="width: 100%; height: fit-content">
+     <div class="relative">
+      <button
+       type="menu"
+       class="btn-save"
+       style="position: absolute; bottom: 0; left: 5px; z-index: 100"
+      >
+       <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-bookmark"
+        viewBox="0 0 16 16"
+       >
+        <path
+         d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"
+        />
+       </svg>
+      </button>
+      <img src="" alt="TV Show Poster" class="btn" />
+     </div>
     </div>
     <div class="flexbox heading">
      <h2
