--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
       placeholder="Did your Favorite Album Make the Cut? 👀"
      />
      <button id="searchByArtist" class="underline">Search by Artist</button>
-     <button id="searchByAlbum">Search By Album</button>
+     <button id="searchByAlbum" style="border-radius: 0 0.3rem 0.3rem 0">
+      Search By Album
+     </button>
     </div>
     <select id="genreFilter">
      <option value="" selected disabled>Filter By Genre</option>
-     <option value="option1">Hip Hop</option>
-     <option value="option2">Rock</option>
-     <option value="option3">Jazz</option>
-     <option value="option3">Pop</option>
-     <option value="option3">Punk</option>
-     <option value="option3">Funk</option>
-     <option value="option3">Soul</option>
+     <option value="hip hop">Hip Hop</option>
+     <option value="rock">Rock</option>
+     <option value="jazz">Jazz</option>
+     <option value="pop">Pop</option>
+     <option value="punk">Punk</option>
+     <option value="funk">Funk</option>
+     <option value="soul">Soul</option>
     </select>
     <button class="">
      Saved Albums
