--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
    </dialog>
    <div id="card-container"></div>
    <div class="card" style="display: none">
-    <div class="card-content relative" style="width: 100%; height: fit-content">
+    <div class="card-content relative" style="width: 100%; height: 50%">
      <div class="relative">
       <button
        type="menu"
@@ -120,7 +120,7 @@
       <img src="" alt="TV Show Poster" class="btn" />
      </div>
     </div>
-    <div class="flexbox heading">
+    <div class="flexbox heading" style="height: 25%">
      <h2
       class="artist"
       style="margin: 1rem 0 1rem 0; border-bottom: 1px solid gray"
