--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       id="filterSearch"
       placeholder="Did your Favorite Album Make the Cut? 👀"
      />
-     <button id="searchByArtist" class="underline">Search by Artist</button>
+     <button id="searchByArtist" class="underline">Search Artist</button>
      <button id="searchByAlbum" style="border-radius: 0 0.3rem 0.3rem 0">
-      Search By Album
+      Search Album
      </button>
     </div>
     <select id="genreFilter">
@@ -95,14 +95,21 @@
     </form>
     <p id="modal-content"></p>
    </dialog>
+
    <div id="card-container"></div>
    <div class="card" style="display: none">
     <div class="card-content relative" style="width: 100%; height: 50%">
      <div class="relative">
       <button
-       type="menu"
        class="btn-save"
-       style="position: absolute; bottom: 0; left: 5px; z-index: 100"
+       style="
+        position: absolute;
+        bottom: -10px;
+        left: -10px;
+        z-index: 100;
+        margin: 0;
+        padding: 0;
+       "
       >
        <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -111,6 +118,7 @@
         fill="currentColor"
         class="bi bi-bookmark"
         viewBox="0 0 16 16"
+        style="margin: 0"
        >
         <path
          d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"
@@ -123,7 +131,7 @@
     <div class="flexbox heading" style="height: 25%">
      <h2
       class="artist"
-      style="margin: 1rem 0 1rem 0; border-bottom: 1px solid gray"
+      style="margin: 2rem 0 1rem 0; border-bottom: 1px solid gray"
      ></h2>
      <h2 class="title">TV Show Title</h2>
     </div>
