--- a/index.html
+++ b/index.html
@@ -36,7 +36,22 @@
      </button>
     </form>
     <h1 class="">Saved Albums</h1>
-    <ol class="savedAlbumsQueue"></ol>
+    <ol id="savedAlbumsQueue">
+     <li
+      class="savedAlbumListItem"
+      style="
+       display: none;
+       flex-direction: column;
+       align-items: center;
+       width: fit-content;
+       height: fit-content;
+       position: relative;
+      "
+     >
+      <img src="" alt="" />
+      <h3></h3>
+     </li>
+    </ol>
    </dialog>
    <nav class="" id="filter-controls">
     <div class="join">
@@ -125,7 +140,7 @@
         />
        </svg>
       </button>
-      <img src="" alt="TV Show Poster" class="btn" />
+      <img src="" alt="Album Cover" class="btn" />
      </div>
     </div>
     <div class="flexbox heading" style="height: 25%">
