fixed saved window

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </div>
     <select id="genreFilter">
      <option value="" selected disabled>Filter By Genre</option>
+     <option value="">All</option>
      <option value="hip hop">Hip Hop</option>
      <option value="rock">Rock</option>
      <option value="jazz">Jazz</option>
