--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
    <h1 class="top-title">
     A Critics Collection of the Greatest Albums of All Time
    </h1>
+   <details>
+    <summary>More About This Page</summary>
+    <p>
+     Epcot is a theme park at Walt Disney World Resort featuring exciting
+     attractions, international <bold style="font-weight: bold">test</bold>,
+     award-winning fireworks and seasonal special events.
+    </p>
+   </details>
   </header>
   <main class="" id="home-page">
    <dialog id="savdAlbumDialog" style="height: 75%">
@@ -115,14 +123,7 @@
      <div class="relative">
       <button
        class="btn-save"
-       style="
-        position: absolute;
-        bottom: -10px;
-        left: -10px;
-        z-index: 100;
-        margin: 0;
-        padding: 0;
-       "
+       style="position: absolute; bottom: -10px; left: -10px; z-index: 100"
       >
        <svg
         xmlns="http://www.w3.org/2000/svg"
