--- a/index.html
+++ b/index.html
@@ -19,9 +19,21 @@
    <details>
     <summary>More About This Page</summary>
     <p>
-     Epcot is a theme park at Walt Disney World Resort featuring exciting
-     attractions, international <bold style="font-weight: bold">test</bold>,
-     award-winning fireworks and seasonal special events.
+     This web page is a collection of albums sourced by music critics on the
+     website
+     <a href="https://www.albumoftheyear.org/">Album of the Year (AOTY)</a>.
+     <br />
+     <br />
+     This site features a <b>minimalistic</b> and
+     <b>contemporary museum-inspired</b> design intended to draw the eye to the
+     iconic album covers and titles of artists, rappers, songwriters, and
+     musicians who have revolutionized the sound of modern music.
+     <br />
+     <br />
+     From Michael Jackson's <i>Thriller</i> to Pink Floyd's
+     <i>The Dark Side of the Moon</i>, placing these albums in this
+     <b>museum</b> of music is a way to venerate these artists and their work
+     for the long-lasting impact they will have on the art.
     </p>
    </details>
   </header>
