--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
    </details>
   </header>
   <main class="" id="home-page">
-   <nav class="" id="filter-controls">
+   <nav class="" id="filter-controls" style="position: relative">
+    <i
+     style="
+      font-size: 10px;
+      position: absolute;
+      top: -15px;
+      left: auto;
+      box-shadow: none;
+     "
+     >Note: All filters work independently of one-another</i
+    >
     <div class="join">
      <input
       type="text"
