--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Greatest Albums of All Time</title>
+  <title>A Critics Collection of the Greatest Albums of All Time</title>
   <meta
    name="description"
    content=" A Critics Collection of the Greatest Albums of All Time"
